[gd_scene load_steps=14 format=2]

[ext_resource path="res://Scenes/Ship.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/Combat_Area/ScreenShakeCamera.gd" type="Script" id=2]
[ext_resource path="res://Scripts/SpawnAsteroids.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Coin.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scripts/Level.gd" type="Script" id=5]
[ext_resource path="res://Scripts/SpawnCoins.gd" type="Script" id=6]
[ext_resource path="res://Assets/Fonts/upheavtt.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Assets/Sprites/play.png" type="Texture" id=8]
[ext_resource path="res://Assets/Sprites/pause.png" type="Texture" id=9]
[ext_resource path="res://Assets/Sprites/restart.png" type="Texture" id=10]
[ext_resource path="res://Assets/Sprites/exit.png" type="Texture" id=11]
[ext_resource path="res://Scripts/PauseUI.gd" type="Script" id=12]

[sub_resource type="DynamicFont" id=1]
size = 80
font_data = ExtResource( 7 )

[node name="Level" type="Node2D"]
pause_mode = 1
script = ExtResource( 5 )

[node name="Background" type="CanvasLayer" parent="."]
layer = 0
follow_viewport_enable = true

[node name="ColorRect" type="ColorRect" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="Level" type="CanvasLayer" parent="."]
follow_viewport_enable = true

[node name="Ship" parent="Level" instance=ExtResource( 1 )]
position = Vector2( 125, 264 )

[node name="SpawnAsteroids" type="Node2D" parent="Level"]
script = ExtResource( 3 )

[node name="SpawnAsteroidsTimer" type="Timer" parent="Level/SpawnAsteroids"]
wait_time = 0.6
autostart = true

[node name="Diffcultween" type="Tween" parent="Level/SpawnAsteroids"]

[node name="Asteroids" type="Node2D" parent="Level/SpawnAsteroids"]

[node name="SpawnCoins" type="Node2D" parent="Level"]
script = ExtResource( 6 )

[node name="SpawnCoinsTimer" type="Timer" parent="Level/SpawnCoins"]
one_shot = true

[node name="Healtimer" type="Timer" parent="Level/SpawnCoins"]
wait_time = 10.0
autostart = true

[node name="Coins" type="Node2D" parent="Level/SpawnCoins"]

[node name="Coin" parent="Level/SpawnCoins/Coins" instance=ExtResource( 4 )]
modulate = Color( 1, 0.980392, 0.505882, 1 )
position = Vector2( 197, -55 )
speed = 1000

[node name="Hitbox" parent="Level/SpawnCoins/Coins/Coin" index="1"]
item = "bonus_coin"

[node name="Items" type="Node2D" parent="Level/SpawnCoins"]

[node name="Projectiles" type="Node2D" parent="Level"]
position = Vector2( 125, 264 )

[node name="ScreenShakeCamera" type="Camera2D" parent="Level"]
offset = Vector2( 512, 300 )
current = true
script = ExtResource( 2 )

[node name="CoverScreen" type="ColorRect" parent="Level"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -169.0
margin_top = -183.0
margin_right = 143.0
margin_bottom = 124.0
color = Color( 0, 0, 0, 1 )

[node name="Ui" type="CanvasLayer" parent="."]
layer = 2
follow_viewport_enable = true

[node name="ScoreLabel" type="Label" parent="Ui"]
margin_left = 32.0
margin_top = 95.0
margin_right = 364.0
margin_bottom = 167.0
custom_fonts/font = SubResource( 1 )
text = "Score: 0"

[node name="ScoreLabelGameOver" type="Label" parent="Ui"]
visible = false
margin_left = 292.0
margin_top = 209.0
margin_right = 576.0
margin_bottom = 281.0
custom_fonts/font = SubResource( 1 )
text = "Score: "

[node name="MaxScoreLabelGameOver" type="Label" parent="Ui"]
visible = false
margin_left = 116.0
margin_top = 328.0
margin_right = 580.0
margin_bottom = 400.0
custom_fonts/font = SubResource( 1 )
text = "Max score: "

[node name="PauseUI" type="CanvasLayer" parent="."]
pause_mode = 2
layer = 3
follow_viewport_enable = true
script = ExtResource( 12 )

[node name="PauseButton" type="TextureButton" parent="PauseUI"]
margin_left = 912.0
margin_top = 15.0
margin_right = 992.0
margin_bottom = 95.0
toggle_mode = true
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 8 )

[node name="RestartButton" type="TextureButton" parent="PauseUI"]
visible = false
margin_left = 835.0
margin_top = 15.0
margin_right = 915.0
margin_bottom = 95.0
texture_normal = ExtResource( 10 )

[node name="ExitButton" type="TextureButton" parent="PauseUI"]
visible = false
margin_left = 752.0
margin_top = 20.0
margin_right = 832.0
margin_bottom = 100.0
texture_normal = ExtResource( 11 )

[connection signal="coin" from="Level/Ship" to="." method="add_score"]
[connection signal="game_over" from="Level/Ship" to="." method="_on_Ship_game_over"]
[connection signal="timeout" from="Level/SpawnAsteroids/SpawnAsteroidsTimer" to="Level/SpawnAsteroids" method="_on_SpawnAsteroidsTimer_timeout"]
[connection signal="timeout" from="Level/SpawnCoins/SpawnCoinsTimer" to="Level/SpawnCoins" method="_on_SpawnCoinsTimer_timeout"]
[connection signal="timeout" from="Level/SpawnCoins/Healtimer" to="Level/SpawnCoins" method="_on_Healtimer_timeout"]
[connection signal="toggled" from="PauseUI/PauseButton" to="PauseUI" method="_on_PauseButton_toggled"]
[connection signal="pressed" from="PauseUI/RestartButton" to="PauseUI" method="_on_RestartButton_pressed"]
[connection signal="pressed" from="PauseUI/ExitButton" to="PauseUI" method="_on_ExitButton_pressed"]

[editable path="Level/SpawnCoins/Coins/Coin"]
